--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,14 @@ date_format: "%B %d, %Y"
 show_excerpts: false        # show article excerpts on the home page
 show_frame: false           # adds a gray frame to the site
 show_sidebar: true        # show a sidebar instead of the usual header
-minimal: false             # use a dark header
+minimal: true             # use a dark header
 
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {title: Home, file: "home.md"}
-  - {title: CV, file: "cv.md"}
-  - {title: About Me, file: "about-me.md"}
+  - {title: Home, file: "index.md"}
+  - {title: Blogs, file: "blog.html"}
+  - {title: About, file: "about.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:hw.55.m.woramet@gmail.com"}
