--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: About, file: "about.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
+  - {title: CV, icon: file, url: "https://drive.google.com/file/d/1PjHykM3w2Y5q0KP56I-UHZLKEUuHLil6/view?usp=sharing"}
   - {title: Mail, icon: envelope, url: "mailto:hw.55.m.woramet@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/sincostanx"}
   - {title: LinkedIn, icon: linkedin, url: "https://www.linkedin.com/in/worameth-chinchuthakun-7b3704148/"}
